updated docker-stack.yml deployment

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -6,6 +6,9 @@ services:
       ports:
         - 80:80
       deploy:
-        mode: global
+        replicas: 4
+        update_config:
+          parallelism: 2
+          delay: 10s
         restart_policy:
           condition: on-failure
