--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,13 +2,13 @@ version: "3"
 services:
 
   portfolio:
-      image: garugaru/portfolio
+      image: garugaru/portfolio:master 
       ports:
         - 80:80
       deploy:
         replicas: 4
         update_config:
-          parallelism: 2
+          parallelism: 2a
           delay: 10s
         restart_policy:
           condition: on-failure
