--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -8,7 +8,7 @@ services:
       deploy:
         replicas: 4
         update_config:
-          parallelism: 2a
+          parallelism: 2
           delay: 10s
         restart_policy:
           condition: on-failure
