Removed image tag

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
 
   portfolio:
-      image: garugaru/portfolio:master 
+      image: garugaru/portfolio 
       ports:
         - 80:80
       deploy:
