--- a/codefresh.yml
+++ b/codefresh.yml
@@ -6,9 +6,9 @@ steps:
     image-name: garugaru/portfolio
     tag: ${{$(shell git rev-parse HEAD | cut -c 1-7)}}
 
-step_name:
-  type: push
-  title: Image push 
-  candidate: ${{build_step_name}} 
-  image_name: garugaru/portfolio
-  fail_fast: false
+  push_image:
+    type: push
+    title: Image push 
+    candidate: ${{build_step_name}} 
+    image_name: garugaru/portfolio
+    fail_fast: false
