--- a/codefresh.yml
+++ b/codefresh.yml
@@ -12,3 +12,15 @@ steps:
     candidate: ${{build_image}}
     tag: ${{CF_SHORT_REVISION}} 
     fail_fast: false
+
+deploy_to_swarm:
+    image: garugaru/portfolio:${{CF_SHORT_REVISION}} 
+    working_directory: ${{main_clone}}
+    commands:
+      - rdocker ${{RDOCKER_HOST}} docker stack deploy --compose-file docker-stack.yml ${{STACK_NAME}}
+    environment:
+      - SSH_KEY=${SSH_KEY}
+    when:
+      branch:
+        only:
+          - master
