--- a/codefresh.yml
+++ b/codefresh.yml
@@ -14,13 +14,13 @@ steps:
     fail_fast: false
 
   deploy_to_swarm:
-      image: codefresh/remote-docker
-      working_directory: ${{main_clone}}
-      commands:
-        - rdocker ${{RDOCKER_HOST}} docker stack deploy --compose-file docker-stack.yml ${{STACK_NAME}}
-      environment:
-        - SSH_KEY=${SSH_KEY}
-      when:
-        branch:
-          only:
-            - master
+    image: codefresh/remote-docker:latest
+    working_directory: ${{main_clone}}
+    commands:
+      - rdocker ${{RDOCKER_HOST}} docker stack deploy --compose-file docker-stack.yml ${{STACK_NAME}}
+    environment:
+      - SSH_KEY=${{SSH_KEY}}
+    when:
+      branch:
+        only:
+          - master
