--- a/codefresh.yml
+++ b/codefresh.yml
@@ -17,7 +17,7 @@ steps:
     image: codefresh/remote-docker:latest
     working_directory: ${{main_clone}}
     commands:
-      - rdocker ${{RDOCKER_HOST}} docker stack deploy --force --compose-file docker-stack.yml ${{STACK_NAME}}
+      - rdocker ${{RDOCKER_HOST}} docker stack deploy --compose-file docker-stack.yml ${{STACK_NAME}} && docker service update --force --image garugaru/portfolio:${{CF_SHORT_REVISION}} personal_portfolio
     environment:
       - SSH_KEY=${{SSH_KEY}}
     when:
