--- a/codefresh.yml
+++ b/codefresh.yml
@@ -18,7 +18,7 @@ steps:
     working_directory: ${{main_clone}}
     commands:
       - rdocker ${{RDOCKER_HOST}} docker stack deploy --compose-file docker-stack.yml ${{STACK_NAME}}
-      - rdocker ${{RDOCKER_HOST}} docker service update --force --image ${{build_image}} ${{STACK_NAME}}_portfolio
+      - rdocker ${{RDOCKER_HOST}} docker service update --force --image garugaru/portfolio:${{CF_SHORT_REVISION}} ${{STACK_NAME}}_portfolio
     environment:
       - SSH_KEY=${{SSH_KEY}}
     when:
