Switched traefik to garu.io, Added kube config

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -9,7 +9,7 @@ services:
         labels:
           - traefik.docker.network=proxy
           - traefik.port=80
-          - traefik.frontend.rule=Host:garu.pizza
+          - traefik.frontend.rule=Host:garu.io
         mode: replicated
         replicas: 1
         restart_policy:
