--- a/kubernetes/portfolio-ingress.yml
+++ b/kubernetes/portfolio-ingress.yml
@@ -1,13 +1,17 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: global-ingress
+  name: garu-portfolio-ingress
+  namespace: personal
+  annotations:
+    kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - host: garu.io
+  - host: kube.garu.io
     http:
       paths:
       - path: /
         backend:
           serviceName: garu-portfolio-service
-          servicePort: 80
+          servicePort: http
