--- a/kubernetes/portfolio-service.yml
+++ b/kubernetes/portfolio-service.yml
@@ -4,13 +4,10 @@ metadata:
   name: garu-portfolio-service
   namespace: personal
 spec:
-  type: NodePort
   ports:
-    - name: nginx
-      protocol: TCP
-      port: 80
-      targetPort: 80
-
+  - name: http
+    port: 80
+    targetPort: 80
   selector:
     app: garu-portfolio
-    tier: frontend
+    tier: frontend 
