--- a/docker/deployment/codefresh.yml
+++ b/docker/deployment/codefresh.yml
@@ -19,7 +19,7 @@ steps:
     image: codefresh/remote-docker:latest
     working_directory: ${{main_clone}}
     commands:
-      - rdocker ${{RDOCKER_HOST}} docker stack deploy --compose-file docker-stack.yml ${{STACK_NAME}}
+      - rdocker ${{RDOCKER_HOST}} docker stack deploy --compose-file docker/deployment/swarm/docker-stack.yml ${{STACK_NAME}}
       - rdocker ${{RDOCKER_HOST}} docker service update --force --image garugaru/portfolio:${{CF_SHORT_REVISION}} ${{STACK_NAME}}_portfolio
     environment:
       - SSH_KEY=${{SSH_KEY}}
